--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
     <div class="block" id="how">
       <h1>学習の進め方</h1>
 
-        <strong>
-          あくまで私の考えであって学習方法に正解などありません。</strong>
+        <strong>あくまで私の考えであって学習方法に正解などありません。</strong>
+        
           <div class="word">
             <ul>
               <li class="list">
